--- a/vampiresandwolfmans/cadastro.htm
+++ b/vampiresandwolfmans/cadastro.htm
@@ -10,7 +10,8 @@
 <body>
       <h1>Cadastro</h1>
       <div align="center">
-           <div >
+           <form name="cadastroform" method="POST" action="cadastroconta.php">
+           <div>
            usuario:<input type="text" size="30"><br>
            email:<input type="text" size="30"><br>
            senha:<input type="text" size="30"><br>
@@ -24,6 +25,7 @@
                 <a href="index.htm">< voltar</a>
                 <input type="button" value="Cadastrar">
            </div>
+           </form>
       </div>
       <div align="center">
            <h6>RONINSoft Copyright@2017</h6>
