--- a/vampiresandwolfmans/index.htm
+++ b/vampiresandwolfmans/index.htm
@@ -14,10 +14,10 @@
                  <h4>Bem-vindo ao jogo. Eh hora de sair para cacar!</h4>
           </header>
           <main>
-          <form method="POST" name="loginform" action="autenticando.php">
+          <form method="POST" name="loginform" action="php/autenticando.php">
                 <div align="center">
-                            Usuario: <input type="text" name="usuario" size="20"><br>
-                            Senha: <input type="password" name="senha" size="20">
+                            Usuario: <input type="text" name="edt_usuario" size="20"><br>
+                            Senha: <input type="password" name="edt_senha" size="20">
 
                 </div>
                 <div align="center">
@@ -27,8 +27,8 @@
                 </div>
           </form>
           </main>
-          <footer align="center">
-           <h6>RONINSoft Copyright@2017</h6>
+          <footer>
+           <a align="center"> <h6>RONINSoft Copyright@2017</h6></a>
           </footer>
       </div>
 </body>
